fix overflow-scrolling value

--- a/src/templates/stylesheet.css
+++ b/src/templates/stylesheet.css
@@ -133,7 +133,7 @@
   padding-left: 25px;
   padding-right: 25px;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: auto;
+  -webkit-overflow-scrolling: touch;
   border-bottom: 1px solid rgba(60, 60, 60, .15);
 }
 
